[gd_scene load_steps=4 format=3 uid="uid://dti3ukqyiwvjk"]

[ext_resource type="Script" path="res://src/world/Hookables/BaseHookable/base_hookable.gd" id="1_ga5y0"]
[ext_resource type="PackedScene" uid="uid://crfdn1yj2cr7a" path="res://src/world/Hookables/BaseHookable/model/attachment_model.tscn" id="2_u7sk0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hstys"]
radius = 0.75

[node name="BaseHookable" type="Area3D"]
collision_layer = 0
collision_mask = 130
script = ExtResource("1_ga5y0")

[node name="Attachment_model" parent="." instance=ExtResource("2_u7sk0")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="DetectionCollider" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_hstys")

[node name="NeighbourCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 2)
collision_mask = 4
collide_with_areas = true
debug_shape_custom_color = Color(0.796078, 1, 0, 1)
debug_shape_thickness = 5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
